moved maiden to a post

--- a/_posts/2019-06-19-Iron-Maiden-2018.md
+++ b/_posts/2019-06-19-Iron-Maiden-2018.md
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: post
 title: Iron Maiden, Madrid 2018
 ---
 
@@ -24,3 +24,5 @@ TBD
 ![Nicko McBrain!](assets/img/music/music-maiden-nicko.jpg)
 
 ![Best Seat in The House](assets/img/music/music-maiden-stage.jpg)
+
+
