more maiden words

--- a/_posts/2019-06-19-Iron-Maiden-2018.md
+++ b/_posts/2019-06-19-Iron-Maiden-2018.md
@@ -11,7 +11,8 @@ title: Iron Maiden, Madrid 2018
 }
 </style>
 
-TBD
+Looking forward to Iron Maiden back in Tacoma Sp 5th 2019, a chance to look back at one 
+of the best shows ever, Maiden in Madrid last year!
 
 ![Madrid 2018](assets/img/music/music-maiden-poster.jpg){: .center-image }
 
