more maiden words

--- a/_posts/2019-06-19-Iron-Maiden-2018.md
+++ b/_posts/2019-06-19-Iron-Maiden-2018.md
@@ -12,18 +12,20 @@ title: Iron Maiden, Madrid 2018
 </style>
 
 Looking forward to Iron Maiden back in Tacoma Sp 5th 2019, a chance to look back at one 
-of the best shows ever, Maiden in Madrid last year!
+of the best shows ever, Maiden in Madrid last year! Part of the Legacy of the Beast 
+tour -- with one of the best posters -- this was a great show made even better by
+[The Truants](https://thetruants.co.uk/) and the [Heavy Metal Truants](https://heavymetaltruants.com/).
 
-![Madrid 2018](assets/img/music/music-maiden-poster.jpg){: .center-image }
+![Madrid 2018](/assets/img/music/music-maiden-poster.jpg){: .center-image }
 
 [Auction](https://www.givergy.com/charity/the-truants)
 
-[Heavy Metal Truants](https://heavymetaltruants.com/)
+Look who we met backstage, the amazing Nicko McBrain.
 
-[The Truants](https://thetruants.co.uk/)
+![Nicko McBrain!](/assets/img/music/music-maiden-nicko.jpg)
 
-![Nicko McBrain!](assets/img/music/music-maiden-nicko.jpg)
+And yes, this had to be the best seat in the house.
 
-![Best Seat in The House](assets/img/music/music-maiden-stage.jpg)
+![Best Seat in The House](/assets/img/music/music-maiden-stage.jpg)
 
 
