more maiden words

--- a/_posts/2019-06-19-Iron-Maiden-2018.md
+++ b/_posts/2019-06-19-Iron-Maiden-2018.md
@@ -14,7 +14,9 @@ title: Iron Maiden, Madrid 2018
 Looking forward to Iron Maiden back in Tacoma Sp 5th 2019, a chance to look back at one 
 of the best shows ever, Maiden in Madrid last year! Part of the Legacy of the Beast 
 tour -- with one of the best posters -- this was a great show made even better by
-[The Truants](https://thetruants.co.uk/) and the [Heavy Metal Truants](https://heavymetaltruants.com/).
+[Rod Smallwood](https://en.wikipedia.org/wiki/Rod_Smallwood), 
+[The Truants](https://thetruants.co.uk/), and the 
+[Heavy Metal Truants](https://heavymetaltruants.com/).
 
 ![Madrid 2018](/assets/img/music/music-maiden-poster.jpg){: .center-image }
 
