--- a/_posts/2019-06-19-Iron-Maiden-2018.md
+++ b/_posts/2019-06-19-Iron-Maiden-2018.md
@@ -20,7 +20,15 @@ tour -- with one of the best posters -- this was a great show made even better b
 
 ![Madrid 2018](/assets/img/music/music-maiden-poster.jpg){: .center-image }
 
-[Auction](https://www.givergy.com/charity/the-truants)
+The truants are a fantastic charity, and Rod supports them with periodic 
+[auctions](https://www.givergy.com/charity/the-truants). We had already planned on going
+To the Madrid show when I bid on an item to go backstage before the show and to watch the
+Show from behind the sound desk. I won!
+
+It was so cool, Rod, the crew, Trooper beer, the Legacy of the Beast pinball
+Machine, and one or two other special guests.
+
+![Nicko McBrain!](/assets/img/music/music-maiden-rod.jpg)
 
 Look who we met backstage, the amazing Nicko McBrain.
 
