adding tags and categories

--- a/_posts/2019-06-19-Iron-Maiden-2018.md
+++ b/_posts/2019-06-19-Iron-Maiden-2018.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: Iron Maiden, Madrid 2018
+categories: [music]
+tags: [madrid, maiden]
 ---
 
 <style type="text/css" media="screen">
