Rust toolchain commentary

--- a/_posts/2020-04-08-Rustioms.md
+++ b/_posts/2020-04-08-Rustioms.md
@@ -43,39 +43,39 @@ These are other pages and articles I have either read more than once or forwarde
 
 These seem to be the most commonly used across the projects I've worked on so far.
 
-* [criterion](https://crates.io/crates/criterion); Statistics-driven micro-benchmarking library
-* [lazy_static](https://crates.io/crates/lazy_static); A macro for declaring lazily evaluated statics in Rust.
-* [log](https://crates.io/crates/log); A lightweight logging facade for Rust; this is the log sending portion, you'll 
+* [**criterion**](https://crates.io/crates/criterion); Statistics-driven micro-benchmarking library
+* [**lazy_static**](https://crates.io/crates/lazy_static); A macro for declaring lazily evaluated statics in Rust.
+* [**log**](https://crates.io/crates/log); A lightweight logging facade for Rust; this is the log sending portion, you'll 
   need another crate to actually capture, format and output the log.
-  * [env_logger](https://crates.io/crates/env_logger) is a simple and common log capture crate, good for services or 
-    interactive tools. I prefer [flexi_logger](https://docs.rs/flexi_logger/0.15.2/flexi_logger/) these days over 
+  * [**env_logger**](https://crates.io/crates/env_logger) is a simple and common log capture crate, good for services or 
+    interactive tools. I prefer [**flexi_logger**](https://docs.rs/flexi_logger/0.15.2/flexi_logger/) these days over 
     env_logger.
-  * [pretty_logger](https://crates.io/crates/pretty_env_logger) is a nice approach using logging interactively, not so 
-    much for services. [fern](https://crates.io/crates/fern) is a nice configurable capture crate although I've not 
+  * [**pretty_logger**](https://crates.io/crates/pretty_env_logger) is a nice approach using logging interactively, not so 
+    much for services. [**fern**](https://crates.io/crates/fern) is a nice configurable capture crate although I've not 
     tried it. 
-  * [tracing](https://crates.io/crates/tracing) (facade) and [tracing-subscriber](https://crates.io/crates/tracing-subscriber) 
+  * [**tracing**](https://crates.io/crates/tracing) (facade) and [**tracing-subscriber**](https://crates.io/crates/tracing-subscriber) 
     (capture) are a very high-performance approach that also supports spans, timing and more, but very service oriented.
-* [num](https://crates.io/crates/num); A collection of numeric types and traits for Rust, including bigint, complex, 
+* [**num**](https://crates.io/crates/num); A collection of numeric types and traits for Rust, including bigint, complex, 
   rational, range iterators, generic integers, and more!
-* [pest](https://crates.io/crates/pest); (with [pest_derive](https://crates.io/crates/pest_derive), and maybe 
-  [pest_consume](https://crates.io/crates/pest_consume)) a parser library using PEGs.
-* [proptest](https://crates.io/crates/proptest); Proptest is a property testing framework (i.e., the QuickCheck family) 
+* [**pest**](https://crates.io/crates/pest); (with [**pest_derive**](https://crates.io/crates/pest_derive), and maybe 
+  [**pest_consume**](https://crates.io/crates/pest_consume)) a parser library using PEGs.
+* [**proptest**](https://crates.io/crates/proptest); Proptest is a property testing framework (i.e., the QuickCheck family) 
   inspired by the Hypothesis framework for Python.
-* [regex](https://crates.io/crates/regex); An implementation of regular expressions for Rust. This implementation uses 
+* [**regex**](https://crates.io/crates/regex); An implementation of regular expressions for Rust. This implementation uses 
   finite automata and guarantees linear time matching on all inputs.
-* [serde](https://crates.io/crates/serde); Serde is a framework for serializing and deserializing Rust data structures 
+* [**serde**](https://crates.io/crates/serde); Serde is a framework for serializing and deserializing Rust data structures 
   efficiently and generically. 
-* [structopt](https://crates.io/crates/structopt); Parse command line argument by defining a struct. More ergonomic 
-  than [clap](https://crates.io/crates/clap).
-* [tokio](https://crates.io/crates/tokio); An event-driven, non-blocking I/O platform for writing asynchronous I/O 
+* [**structopt**](https://crates.io/crates/structopt); Parse command line argument by defining a struct. More ergonomic 
+  than [**clap**](https://crates.io/crates/clap).
+* [**tokio**](https://crates.io/crates/tokio); An event-driven, non-blocking I/O platform for writing asynchronous I/O 
   backed applications. 
   * There are a number of frameworks for building services and web apps, it's worth a read of 
     [_Rust web framework comparison_](https://github.com/flosse/rust-web-framework-comparison).
-* [toml](https://crates.io/crates/toml); A native Rust encoder and decoder of TOML-formatted files and streams.
+* [**toml**](https://crates.io/crates/toml); A native Rust encoder and decoder of TOML-formatted files and streams.
 
-## A Preview of Upcoming Attractions
+## Contents, Complete & Upcoming
 
-* The Toolchain
+* [The Rust Toolchain]({% post_url 2020-04-09-The-Rust-Toolchain-Rustioms %})
 * Error Handling:
   * Option and Result
   * Error Types
