Added error handling post

--- a/_posts/2020-04-08-Rustioms.md
+++ b/_posts/2020-04-08-Rustioms.md
@@ -76,9 +76,7 @@ These seem to be the most commonly used across the projects I've worked on so fa
 ## Contents, Complete & Upcoming
 
 * [The Rust Toolchain]({% post_url 2020-04-09-The-Rust-Toolchain-Rustioms %})
-* Error Handling:
-  * Option and Result
-  * Error Types
+* [Error Handling]({% post_url 2020-04-09-Error-Handling-Rustioms %})
 * It's Traits (Almost) All the Way Down
 * Pattern Matching
 * Iterators
