--- a/_posts/2020-04-08-Rustioms.md
+++ b/_posts/2020-04-08-Rustioms.md
@@ -77,7 +77,7 @@ These seem to be the most commonly used across the projects I've worked on so fa
 
 * [The Rust Toolchain]({% post_url 2020-04-09-The-Rust-Toolchain-Rustioms %})
 * [Error Handling]({% post_url 2020-04-09-Error-Handling-Rustioms %})
-* It's Traits (Almost) All the Way Down
+* [It's Traits (Almost) All the Way Down]({% post_url 2020-04-10-Its-Traits-All-The-Way-Down-Rustioms %})
 * Pattern Matching
 * Iterators
 * Clone on Write
