layout post -> postx

--- a/_posts/2020-04-08-Rustioms.md
+++ b/_posts/2020-04-08-Rustioms.md
@@ -1,6 +1,6 @@
 ---
 title: Rustioms
-layout: post
+layout: postx
 categories: [code]
 tags: [rust, idioms]
 ---
@@ -80,11 +80,10 @@ These seem to be the most commonly used across the projects I've worked on so fa
 * [Error Handling]({% post_url 2020-04-09-Error-Handling-Rustioms %})
 * [It's Traits (Almost) All the Way Down]({% post_url 2020-04-10-Its-Traits-All-The-Way-Down-Rustioms %})
 * [Pattern Matching]({% post_url 2020-04-10-Pattern-Matching-Rustioms %})
-* Iterators
-* Clone on Write
+* [The Dark Side of Traits]({% post_url 2020-04-13-The-Dark-Side-Of-Traits-Rustioms %})
 * Macros: Compile Time Magic
 * Testing
-* Ref Types
-* Dynamic Dispatch
+* Ref Types and Clone on Write
+
 
 
