Added reference type topic

--- a/_posts/2020-04-08-Rustioms.md
+++ b/_posts/2020-04-08-Rustioms.md
@@ -81,9 +81,9 @@ These seem to be the most commonly used across the projects I've worked on so fa
 * [It's Traits (Almost) All the Way Down]({% post_url 2020-04-10-Its-Traits-All-The-Way-Down-Rustioms %})
 * [Pattern Matching]({% post_url 2020-04-10-Pattern-Matching-Rustioms %})
 * [The Dark Side of Traits]({% post_url 2020-04-13-The-Dark-Side-Of-Traits-Rustioms %})
+* [Ref Types and Clone on Write]({% post_url 2020-04-17-So-Many-Ref-Types-Rustioms %})
 * Macros: Compile Time Magic
 * Testing
-* Ref Types and Clone on Write
 
 
 
