--- a/_posts/2020-04-08-Rustioms.md
+++ b/_posts/2020-04-08-Rustioms.md
@@ -29,6 +29,7 @@ are the documentation and article links I find useful and my curated set of go-t
 1. [Rust Language Cheat Sheet](https://cheats.rs/) 
 1. [The Rust Programming Language (Book)](https://doc.rust-lang.org/book/)
 1. [The Edition Guide](https://doc.rust-lang.org/nightly/edition-guide/)
+1. [The Unstable Book](https://doc.rust-lang.org/nightly/unstable-book/the-unstable-book.html)
 1. [Standard Library Documentation](https://std.rs/)
 1. [3rd Party Libraries for Rust](https://crates.io/)
 1. [Rust Playground](https://play.rust-lang.org/)
