Add URLs for cached documents

--- a/assets/doc/personal.bib
+++ b/assets/doc/personal.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Johnston, Simon at 2022-02-17 09:29:16 -0800 
+%% Created for Johnston, Simon at 2022-02-18 08:27:28 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,50 +10,69 @@
 
 @article{brown2002using,
 	author = {Brown, Alan and Johnston, Simon and Kelly, Kevin},
+	date-modified = {2022-02-18 08:01:29 -0800},
 	journal = {Rational Software Corporation},
 	pages = {1--16},
 	title = {Using service-oriented architecture and component-based development to build web service applications},
+	url = {https://simonkjohnston.life/assets/doc/using_soa_and_cbd_to_build_ws_applications.pdf},
 	volume = {6},
-	year = {2002}}
+	year = {2002},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/using_soa_and_cbd_to_build_ws_applications.pdf}}
 
 @article{johnston2005uml,
+	annote = {Original: https://simonkjohnston.life/assets/doc/UML_2_0_Profile_for_Software_Services.pdf},
 	author = {Johnston, Simon},
-	journal = {IBM developerWorks http://www. ibm. com/developerworks/rational/library/05/419\_soa},
+	date-modified = {2022-02-18 08:00:49 -0800},
+	journal = {IBM developerWorks},
 	title = {UML 2.0 profile for software services},
-	year = {2005}}
+	url = {https://simonkjohnston.life/assets/doc/UML_2_0_Profile_for_Software_Services(IBM).pdf},
+	year = {2005},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/UML_2_0_Profile_for_Software_Services(IBM).pdf}}
 
 @article{brown2005realizing,
 	author = {Brown, Alan W and Delbaere, Marc and Eeles, Peter and Johnston, Simon and Weaver, Rick},
+	date-modified = {2022-02-18 07:59:47 -0800},
 	journal = {IBM systems journal},
 	number = {4},
 	pages = {727--752},
 	publisher = {IBM},
 	title = {Realizing service-oriented solutions with the IBM rational software development platform},
+	url = {https://simonkjohnston.life/assets/doc/Realizing_service-oriented_solutions_with_the_IBM_Rational_Software_Development_Platform.pdf},
 	volume = {44},
-	year = {2005}}
+	year = {2005},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/Realizing_service-oriented_solutions_with_the_IBM_Rational_Software_Development_Platform.pdf}}
 
 @article{brown2006rational,
 	author = {Brown, Alan W and Iyengar, Sridhar and Johnston, Simon},
+	date-modified = {2022-02-18 07:56:29 -0800},
 	journal = {IBM Systems Journal},
 	number = {3},
 	pages = {463--480},
 	publisher = {IBM},
 	title = {A Rational approach to model-driven development},
+	url = {https://simonkjohnston.life/assets/doc/A_Rational_approach_to_model-driven_development.pdf},
 	volume = {45},
-	year = {2006}}
+	year = {2006},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/A_Rational_approach_to_model-driven_development.pdf}}
 
 @article{johnston2004rational,
 	author = {Johnston, Simon and others},
-	journal = {IBM Developer Works, http://www. ibm. com/developerworks/rational/library/5167. html},
+	date-modified = {2022-02-18 07:59:12 -0800},
+	journal = {IBM Developer Works},
 	title = {Rational UML Profile for business modeling},
-	year = {2004}}
+	url = {https://simonkjohnston.life/assets/doc/Rational_UML_Profile_for_Business_Modeling.pdf},
+	year = {2004},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/Rational_UML_Profile_for_Business_Modeling.pdf}}
 
 @article{frank2004business,
 	author = {Frank, Joachim H and Gardner, Tracy A and Johnston, Simon K and White, Stephen A and Iyengar, Sridhar},
+	date-modified = {2022-02-18 07:57:42 -0800},
 	journal = {IBM's Proposal in Response to the OMG's RFP for a Business Process Definition Metamodel},
 	pages = {202004--05},
 	title = {Business processes definition metamodel concepts and overview},
-	year = {2004}}
+	url = {https://simonkjohnston.life/assets/doc/Ada_95_A_Guide_for_C_and_Cpp_Programmers.pdf},
+	year = {2004},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/Ada_95_A_Guide_for_C_and_Cpp_Programmers.pdf}}
 
 @article{johnston2005modeling,
 	author = {Johnston, Simon},
@@ -63,10 +82,13 @@
 
 @article{brown2005soa,
 	author = {Brown, Alan and Johnston, Simon K and Larsen, Grant and Palistrant, Jim},
+	date-modified = {2022-02-18 08:00:16 -0800},
 	journal = {Rational Software},
 	title = {SOA development using the IBM rational software development platform: a practical guide},
+	url = {https://simonkjohnston.life/assets/doc/SOA_Development_Using_the_IBM_Rational_SDP.pdf},
 	volume = {14},
-	year = {2005}}
+	year = {2005},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/SOA_Development_Using_the_IBM_Rational_SDP.pdf}}
 
 @article{johnston2005rup,
 	author = {Johnston, S and Smith, J},
@@ -90,184 +112,298 @@
 @inproceedings{brown2007practical,
 	author = {Brown, Alan W and Delbaere, Marc and Johnston, Simon K},
 	booktitle = {International Conference on Model Driven Engineering Languages and Systems},
+	date-modified = {2022-02-18 07:55:54 -0800},
 	organization = {Springer, Berlin, Heidelberg},
 	pages = {390--404},
 	title = {A practical perspective on the design and implementation of service-oriented solutions},
-	year = {2007}}
+	url = {https://simonkjohnston.life/assets/doc/A_practical_perspective_on_the_design_and_implementation_of_service-oriented_solutions.pdf},
+	year = {2007},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/A_practical_perspective_on_the_design_and_implementation_of_service-oriented_solutions.pdf}}
 
 @misc{johnston2009method,
 	author = {Johnston, Simon Kurt and Kelly, Kevin Edward and Kratky, Jan Joseph and Speicher, Steven Keith},
+	date-modified = {2022-02-18 08:12:59 -0800},
+	howpublished = {patent},
 	month = mar # {~17},
 	note = {US Patent 7,506,263},
+	publisher = {USPTO},
 	title = {Method and system for visualization of threaded email conversations},
-	year = {2009}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US7506263.pdf},
+	year = {2009},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US7506263.pdf}}
 
 @misc{johnston2008message,
 	author = {Johnston, Simon K and Kelly, Kevin E and Kratky, Jan J and Speicher, Steven K},
+	date-modified = {2022-02-18 08:27:03 -0800},
+	howpublished = {patent application},
 	month = oct # {~23},
 	note = {US Patent App. 11/737,883},
+	publisher = {USPTO},
 	title = {Message Flow Model of Interactions Between Distributed Services},
-	year = {2008}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US20080259930A1.pdf},
+	year = {2008},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US20080259930A1.pdf}}
 
 @misc{johnston2015state,
 	author = {Johnston, Simon K},
+	date-modified = {2022-02-18 08:14:57 -0800},
+	howpublished = {patent},
 	month = mar # {~31},
 	note = {US Patent 8,996,714},
+	publisher = {USPTO},
 	title = {State-dependent entity based implementation of a service oriented architected application},
-	year = {2015}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US8996714.pdf},
+	year = {2015},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US8996714.pdf}}
 
 @misc{branigan2012indexing,
 	author = {Branigan, James P and Charboneau, David P and Johnston, Simon K and Nally, Martin P and Rich, Lawrence S and Ting, Edison L and van der Linden, Robbert},
+	date-modified = {2022-02-18 08:10:24 -0800},
+	howpublished = {patent},
 	month = sep # {~25},
 	note = {US Patent 8,275,888},
+	publisher = {USPTO},
 	title = {Indexing heterogeneous resources},
-	year = {2012}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US8275888.pdf},
+	year = {2012},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US8275888.pdf}}
 
 @misc{branigan2012apparatus,
 	author = {Branigan, James P and Charboneau, David P and Johnston, Simon K},
+	date-modified = {2022-02-18 08:16:21 -0800},
+	howpublished = {patent},
 	month = aug # {~28},
 	note = {US Patent 8,255,394},
+	publisher = {USPTO},
 	title = {Apparatus, system, and method for efficient content indexing of streaming XML document content},
-	year = {2012}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US8255394.pdf},
+	year = {2012},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US8255394.pdf}}
 
 @misc{johnston2015representing,
 	author = {Johnston, Simon K and Nally, Martin P},
+	date-modified = {2022-02-18 08:13:49 -0800},
+	howpublished = {patent},
 	month = sep # {~1},
 	note = {US Patent 9,122,422},
+	publisher = {USPTO},
 	title = {Representing models in systems development lifecycle (SDLC) tools using a network of internet resources},
-	year = {2015}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US9122422.pdf},
+	year = {2015},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US9122422.pdf}}
 
 @misc{irassar2009defining,
 	author = {Irassar, Pablo D and Johnston, Simon K},
+	date-modified = {2022-02-18 08:05:48 -0800},
+	howpublished = {patent application},
 	month = may # {~28},
 	note = {US Patent App. 11/946,530},
+	publisher = {USPTO},
 	title = {Defining operational elements in a business process model},
-	year = {2009}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US20090138249A1.pdf},
+	year = {2009},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US20090138249A1.pdf}}
 
 @misc{johnston2009automatic,
 	author = {Johnston, Simon K and Kelly, Kevin E and Kratky, Jan J and Speicher, Steven K},
+	date-modified = {2022-02-18 08:03:30 -0800},
+	howpublished = {patent application},
 	month = apr # {~23},
 	note = {US Patent App. 11/873,819},
+	publisher = {USPTO},
 	title = {Automatic destination determination for multiple travelers departing from multiple source locations based on user specified criteria},
-	year = {2009}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US20090105941A1.pdf},
+	year = {2009},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US20090105941A1.pdf}}
 
 @misc{brown2011system,
 	author = {Brown, Alan William and Johnston, Simon K and Smith, John},
+	date-modified = {2022-02-18 08:15:12 -0800},
+	howpublished = {patent},
 	month = aug # {~30},
 	note = {US Patent 8,010,936},
+	publisher = {USPTO},
 	title = {System and method for describing method process using guided architectural decisions},
-	year = {2011}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US8010936.pdf},
+	year = {2011},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US8010936.pdf}}
 
 @misc{charboneau2012baselines,
-	author = {Charboneau, David P and Johnston, Simon K and Mulet, Philippe P and CORPORATION, INTERNATIONAL BUSINESS MACHINES},
+	author = {Charboneau, David P and Johnston, Simon K and Mulet, Philippe P},
+	howpublished = {patent},
 	month = mar # {~15},
 	note = {US Patent 20,120,066,228},
-	title = {BASELINES OVER INDEXED, VERSIONED DATA},
+	publisher = {USPTO},
+	title = {Baselines over indexed, versioned data},
 	year = {2012}}
 
 @misc{palaniappan2015automating,
 	author = {Palaniappan, Ramanathan and Shavit, Gideon and Steele, Alan M and Johnston, Simon K},
+	date-modified = {2022-02-18 08:03:50 -0800},
+	howpublished = {patent},
 	month = oct # {~27},
 	note = {US Patent 9,170,821},
-	publisher = {Google Patents},
+	publisher = {USPTO},
 	title = {Automating workflow validation},
-	year = {2015}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US9170821.pdf},
+	year = {2015},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US9170821.pdf}}
 
 @misc{johnston2016network,
 	author = {Johnston, Simon K},
+	date-modified = {2022-02-18 08:13:25 -0800},
+	howpublished = {patent},
 	month = feb # {~16},
 	note = {US Patent 9,262,311},
-	publisher = {Google Patents},
+	publisher = {USPTO},
 	title = {Network page test system and methods},
-	year = {2016}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US9262311.pdf},
+	year = {2016},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US9262311.pdf}}
 
 @misc{johnston2014hosted,
 	author = {Johnston, Simon K},
+	date-modified = {2022-02-18 08:08:39 -0800},
+	howpublished = {patent},
 	month = sep # {~16},
 	note = {US Patent 8,838,764},
-	publisher = {Google Patents},
+	publisher = {USPTO},
 	title = {Hosted network management},
-	year = {2014}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US8838764.pdf},
+	year = {2014},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US8838764.pdf}}
 
 @misc{johnston2016hosted,
 	author = {Johnston, Simon K},
+	date-modified = {2022-02-18 08:09:21 -0800},
+	howpublished = {patent},
 	month = feb # {~16},
 	note = {US Patent 9,264,339},
-	publisher = {Google Patents},
+	publisher = {USPTO},
 	title = {Hosted network management},
-	year = {2016}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US9264339.pdf},
+	year = {2016},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US9264339.pdf}}
 
 @misc{johnston2016integrating,
 	author = {Johnston, Simon K},
+	date-modified = {2022-02-18 08:11:35 -0800},
+	howpublished = {patent},
 	month = oct # {~18},
 	note = {US Patent 9,471,569},
-	publisher = {Google Patents},
+	publisher = {USPTO},
 	title = {Integrating information sources to create context-specific documents},
-	year = {2016}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US9471569.pdf},
+	year = {2016},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US9471569.pdf}}
 
 @misc{johnston2017integrating,
 	author = {Johnston, Simon K},
+	date-modified = {2022-02-18 08:11:16 -0800},
+	howpublished = {patent},
 	month = jan # {~24},
 	note = {US Patent 9,552,123},
-	publisher = {Google Patents},
+	publisher = {USPTO},
 	title = {Integrating applications in a portal},
-	year = {2017}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US9552123.pdf},
+	year = {2017},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US9552123.pdf}}
 
 @misc{porter2017techniques,
 	author = {Porter, Brandon William and Frank, Martin Robert and Johnston, Simon Kurt},
+	date-modified = {2022-02-18 08:15:29 -0800},
+	howpublished = {patent},
 	month = jun # {~20},
 	note = {US Patent 9,684,914},
+	publisher = {USPTO},
 	title = {Techniques for real-time dynamic pricing},
-	year = {2017}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US9684914.pdf},
+	year = {2017},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US9684914.pdf}}
 
 @misc{johnston2014client,
 	author = {Johnston, Simon K and Eng, Margaux and Keiger, James K and Shavit, Gideon},
+	date-modified = {2022-02-18 08:04:47 -0800},
+	howpublished = {patent},
 	month = sep # {~23},
 	note = {US Patent 8,843,360},
+	publisher = {USPTO},
 	title = {Client-side localization of network pages},
-	year = {2014}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US8843360.pdf},
+	year = {2014},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US8843360.pdf}}
 
 @misc{johnston2013facilitating,
 	author = {Johnston, Simon K and Palaniappan, Ramanathan and Keiger, James K},
+	date-modified = {2022-02-18 08:07:57 -0800},
+	howpublished = {patent},
 	month = nov # {~12},
 	note = {US Patent 8,583,677},
+	publisher = {USPTO},
 	title = {Facilitating access to multiple facets of data},
-	year = {2013}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US8583677.pdf},
+	year = {2013},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US8583677.pdf}}
 
 @misc{johnston2015distributed,
 	author = {Johnston, Simon K and Palaniappan, Ramanathan},
+	date-modified = {2022-02-18 08:07:20 -0800},
+	howpublished = {patent},
 	month = may # {~5},
 	note = {US Patent 9,026,577},
+	publisher = {USPTO},
 	title = {Distributed workflow management system},
-	year = {2015}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US9026577.pdf},
+	year = {2015},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US9026577.pdf}}
 
 @misc{johnston2019image,
 	author = {Johnston, Simon Kurt},
+	date-modified = {2022-02-18 08:09:35 -0800},
+	howpublished = {patent},
 	month = may # {~7},
 	note = {US Patent 10,281,200},
+	publisher = {USPTO},
 	title = {Image-based spoilage sensing refrigerator},
-	year = {2019}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US10281200.pdf},
+	year = {2019},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US10281200.pdf}}
 
 @misc{johnston2014workflow,
 	author = {Johnston, Simon K},
+	date-modified = {2022-02-18 08:15:46 -0800},
+	howpublished = {patent},
 	month = jan # {~28},
 	note = {US Patent 8,639,555},
+	publisher = {USPTO},
 	title = {Workflow discovery through user action monitoring},
-	year = {2014}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US8639555.pdf},
+	year = {2014},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US8639555.pdf}}
 
 @misc{johnston2019scent,
 	author = {Johnston, Simon Kurt},
+	date-modified = {2022-02-18 08:14:07 -0800},
+	howpublished = {patent},
 	month = aug # {~6},
 	note = {US Patent 10,373,472},
+	publisher = {USPTO},
 	title = {Scent-based spoilage sensing refrigerator},
-	year = {2019}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US10373422.pdf},
+	year = {2019},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US10373422.pdf}}
 
 @misc{johnston2019cross,
 	author = {Johnston, Simon Kurt and Rutter, Michael David and Donnelley, Samuel Ytzhak},
+	date-modified = {2022-02-18 08:05:22 -0800},
+	howpublished = {patent},
 	month = jan # {~8},
 	note = {US Patent 10,167,146},
+	publisher = {USPTO},
 	title = {Cross-references in service schema},
-	year = {2019}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US10167146.pdf},
+	year = {2019},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US10167146.pdf}}
 
 @misc{johnston2009graph,
 	author = {Johnston, Simon and Rich, Scott},
@@ -275,22 +411,30 @@
 	title = {Graph Update Protocol},
 	year = {2009}}
 
-@misc{johnston1997ada,
+@webpage{johnston1997ada,
 	author = {Johnston, Simon},
+	date-modified = {2022-02-18 07:57:08 -0800},
 	title = {Ada 95 for C and C ++ Programmers},
-	year = {1997}}
+	url = {https://simonkjohnston.life/assets/doc/Ada_95_A_Guide_for_C_and_Cpp_Programmers.pdf},
+	year = {1997},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/Ada_95_A_Guide_for_C_and_Cpp_Programmers.pdf}}
 
-@misc{johnston2006method,
+@webpage{johnston2006method,
 	author = {Johnston, Simon and Berg, Daniel},
-	journal = {http://priorartdatabase.com/IPCOM/000141514},
+	date-modified = {2022-02-18 08:12:27 -0800},
 	title = {Method and Apparatus for Dynamic Script Execution in an Interactive Development Environment},
-	year = {2006}}
+	url = {http://priorartdatabase.com/IPCOM/000141514},
+	year = {2006},
+	bdsk-url-1 = {http://priorartdatabase.com/IPCOM/000141514}}
 
 @misc{johnston2006developing,
 	author = {Johnston, Simon},
-	journal = {http://www.ibm.com/developerworks/rational/library/06/0327\_johnston/},
+	date-modified = {2022-02-18 08:06:32 -0800},
+	howpublished = {IBM developerWorks},
 	title = {Developing a language feature for Rational Software Architect},
-	year = {2006}}
+	url = {http://www.ibm.com/developerworks/rational/library/06/0327\_johnston/},
+	year = {2006},
+	bdsk-url-1 = {http://www.ibm.com/developerworks/rational/library/06/0327%5C_johnston/}}
 
 @article{johnston1999business,
 	author = {Johnston, Simon and Christerson, Magnus},
@@ -301,42 +445,69 @@
 
 @misc{johnston2019event,
 	author = {johnston, Simon Kurt and Steele, Alan M and Palaniappan, Ramanathan},
+	date-modified = {2022-02-18 08:07:38 -0800},
+	howpublished = {patent},
 	month = may # {~7},
 	note = {US Patent 10,282,689},
+	publisher = {USPTO},
 	title = {Event-based composition model for workflow systems},
-	year = {2019}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US10282689.pdf},
+	year = {2019},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US10282689.pdf}}
 
 @misc{johnston2019workflow,
 	author = {Johnston, Simon Kurt},
+	date-modified = {2022-02-18 08:16:08 -0800},
+	howpublished = {patent},
 	month = may # {~21},
 	note = {US Patent 10,296,859},
+	publisher = {USPTO},
 	title = {Workflow discovery through user action monitoring},
-	year = {2019}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US10296859.pdf},
+	year = {2019},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US10296859.pdf}}
 
 @inproceedings{johnson2006model,
 	author = {Johnson, Simon K and Brown, Alan W},
 	booktitle = {International Conference on Service-Oriented Computing},
+	date-modified = {2022-02-18 07:55:06 -0800},
 	organization = {Springer},
 	pages = {624--636},
+	publisher = {USPTO},
 	title = {A model-driven development approach to creating service-oriented solutions},
-	year = {2006}}
+	url = {https://simonkjohnston.life/assets/doc/A_model-driven_development_approach_to_creating_service-oriented_solutions.pdf},
+	year = {2006},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/A_model-driven_development_approach_to_creating_service-oriented_solutions.pdf}}
 
 @misc{johnston2021scent,
 	author = {Johnston, Simon Kurt},
+	date-modified = {2022-02-18 08:14:36 -0800},
+	howpublished = {patent},
 	month = nov # {~23},
 	note = {US Patent 11,181,515},
+	publisher = {USPTO},
 	title = {Scent-based spoilage sensing refrigerator},
-	year = {2021}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US11181515.pdf},
+	year = {2021},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US11181515.pdf}}
 
 @misc{arguelles2020contributed,
 	author = {Arguelles, Carlos Alejandro and Johnston, Simon Kurt and McDaniel, Wes and Panko, David and Prutsman, Darrin and Singh, Harpreet},
+	date-modified = {2022-02-18 08:05:06 -0800},
+	howpublished = {patent},
 	month = jul # {~21},
 	note = {US Patent 10,719,427},
+	publisher = {USPTO},
 	title = {Contributed test management in deployment pipelines},
-	year = {2020}}
+	url = {https://simonkjohnston.life/assets/doc/patents/US10719427.pdf},
+	year = {2020},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/patents/US10719427.pdf}}
 
 @article{brown2002large,
 	author = {Brown, Alan W and Johnston, S and Kelly, K},
+	date-modified = {2022-02-18 07:58:25 -0800},
 	journal = {Rational Software White Paper TP032},
 	title = {Large-scale, using service-oriented architecture and component-based development to build web service applications},
-	year = {2002}}
+	url = {https://simonkjohnston.life/assets/doc/using_soa_and_cbd_to_build_ws_applications.pdf},
+	year = {2002},
+	bdsk-url-1 = {https://simonkjohnston.life/assets/doc/using_soa_and_cbd_to_build_ws_applications.pdf}}
